<resources>
    <string name="app_name">Check.me</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="daily">Daily</string>
    <string name="tasks">Tasks</string>
    <string name="allTasks">All tasks</string>
    <string name="instances">Reminders</string>
    <string name="reminder">Reminder</string>
    <string name="times">Times</string>
    <string name="other">Pick a time manually</string>
    <string name="save">Save</string>
    <string name="saveAndOpen">Save and open</string>
    <string name="multiple_reminders">reminders</string>
    <string name="join">Join</string>
    <string name="split">Split</string>
    <string name="done">Done</string>
    <string name="more">more</string>
    <string name="hour">In an hour</string>
    <string name="delete">Remove</string>
    <string name="edit">Edit</string>
    <string name="expand">Expand</string>
    <string name="edit_instance">Change reminder time</string>
    <string name="show_task">Show task</string>
    <string name="copyTask">Copy</string>
    <string name="mark_done">Mark done</string>
    <string name="mark_not_done">Mark not done</string>
    <string name="title_hint">Title</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task">Remove task</string>
    <string name="error_date">Date is in the past</string>
    <string name="error_time">Time is in the past</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="custom_times_empty">Add a time by clicking the plus at the bottom.</string>
    <string name="instances_empty_root">Add a reminder by clicking the plus at the bottom.</string>
    <string name="tasks_empty_root">Add a task by clicking the plus at the bottom.</string>
    <string name="empty_child">Make a list by clicking the plus at the bottom.</string>
    <string name="empty_disabled">You can\'t add anything here, because the task has been removed.</string>
    <string name="add">Add a new time</string>
    <string name="parentTask">Add to project or task</string>
    <string name="share">Share</string>
    <string name="sendTo">Send to:</string>
    <string name="titleError">Enter a title</string>
    <string name="add_task">Add task</string>
    <string name="notes">Notes</string>
    <string name="addReminder">Add reminder</string>
    <string name="addNote">Add note</string>
    <string name="selectAll">Select all</string>
    <string name="description">Description</string>
    <string name="monthDay">day</string>
    <string name="monthDayStart">from the</string>
    <string name="monthDayEnd">of the month</string>
    <string name="signOut">Sign out</string>
    <string name="signInFailed">Sign in failed.</string>
    <string name="signInAs">Signed in as</string>
    <string name="friends">Friends</string>
    <string name="debug" translatable="false">Debug</string>
    <string name="friends_empty">Add a friend by clicking the plus at the bottom.</string>
    <string name="email_hint">Name or e-mail address</string>
    <string name="search">Search</string>
    <string name="connectionError">A connection error occurred.</string>
    <string name="friend_dialog_title">Pick a friend</string>
    <string name="instanceMarkedDone">This reminder has been marked as done.</string>
    <string name="projects">Projects</string>
    <string name="projects_empty">Add a project by clicking the plus at the bottom.</string>
    <string name="showInstances">Show reminders</string>
    <string name="tutorial1">Begin by creating a task.  A task can have a title, description, and subtasks.</string>
    <string name="tutorial2">You can also add reminders to a task, to get notified about it at a specific time. You can be notified once, on certain days of the week, or on a certain day of every month.</string>
    <string name="tutorial3">You can set a reminder for a specific hour.  Also, you can add a named time of day as a shortcut, if you often have things to do at a specific time.</string>
    <string name="tutorial4">Sign into your Google account to share tasks with other users.  Start out by searching for users by e-mail address to add them as friends.  Create a project, and add friends to it.  Finally, when creating or editing a task, set the project as its parent.</string>
    <string name="tutorial">Tutorial</string>
    <string name="snackbarRemoved">%1$s removed</string>
    <string name="undo">undo</string>
    <string name="add_task_this_time">Add new task</string>
    <string name="notify">Show notification</string>
    <string name="filterDay">Day</string>
    <string name="filterWeek">Week</string>
    <string name="filterMonth">Month</string>
    <string name="snackbarDone">%1$s marked as done</string>
    <string name="snackbarNotDone">%1$s marked as not done</string>
    <string name="snackbarHour">%1$s rescheduled</string>
    <string name="about">About</string>
    <string name="aboutDescription">This app is a growing collection of all the features I thought were missing from other applications of its kind.  Apart from the basics, it has multi-user projects, nested tasks, advanced task structure editing, custom time presets, single reminders, as well as daily, weekly, and monthly reminder schedules, and more to come!</string>
    <string name="designBy">Design by Bernarda Wsuł</string>
    <string name="add_an_image">Add image</string>
    <string name="camera">Take photo</string>
    <string name="gallery">Choose image</string>
    <string name="remove">Remove image</string>
    <string name="addTo">Add to</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="accountDetails">Profile</string>
    <string name="accountUpdate">Update your profile based on your Google account</string>
    <string name="profileUpdated">Profile updated</string>
    <string name="startPage">Start page</string>
    <string name="general">General</string>
    <string name="defaultReminder">Default reminder</string>
    <string name="defaultReminderSummaryOn">Automatically add a reminder to new tasks</string>
    <string name="defaultReminderSummaryOff">Don\'t add a reminder to new tasks</string>
    <string name="showRemoved">Show removed and done</string>
    <string name="noResults">No results</string>
    <string name="removeInstancesMessage">Remove incomplete reminders?</string>
    <string name="removeInstancesNo">No</string>
    <string name="removeInstancesYes">Yes</string>
    <string name="removeInstancesCancel">Cancel</string>
    <string name="version">Version</string>
    <string name="from">From</string>
    <string name="until">Until</string>
    <string name="endDate">End date cannot be before start date</string>
    <string name="allDays">All days</string>
    <string name="allFutureReminders">All future reminders</string>
    <string name="joinAllFutureReminders">Join all future reminders?</string>
    <string name="justTheseReminders">Just these reminders</string>
    <string name="addToAllReminders">Add to all reminders?</string>
    <string name="toAllReminders">All reminders</string>
    <string name="justToThisReminder">Just this reminder</string>
    <string name="webSearch">Web search</string>
    <string name="weeksPrefix">every</string>
    <string name="weeksSuffix">weeks</string>
    <string name="dateCannotBeEmpty">Date cannot be empty</string>
    <string name="everyXWeeks">every %d weeks</string>
    <string name="copyingTasksTitle">Copying tasks</string>
    <string name="stopCopyingMessage">Do you want to stop copying these tasks?</string>
    <string name="stopCopyingYes">Stop</string>
    <string name="showNotifications">Show notifications</string>
    <string name="highPriorityNotifications">Pop on screen</string>
    <string name="mediumPriorityNotifications">Show in notification drawer</string>
    <string name="noNotifications">Don\'t show</string>
    <string name="notifications">Notifications</string>
    <string name="addTaskList">Add to list</string>
    <string name="addToProject">Add to project</string>
    <string name="subtaskDialogMessage">Add a new task at this time?</string>
    <string name="assignTask">Assign task</string>
    <string name="assignedToAll">Assigned to all members</string>
    <string name="assignedTo">Assigned to:</string>
    <string name="showAssignedTo">Show assigned to others</string>
    <string name="addToReminder">Add to reminder</string>
    <string name="setTime">Set time</string>
    <string name="showCalendar">Show calendar</string>
    <string name="tooltip_press_to_select">Press and hold to select an item.</string>
    <string name="tooltip_press_menu_tooltip">Wondering what a menu icon does? Press and hold to show a hint.</string>
    <string name="tooltip_press_drag">Press and hold to rearrange items.</string>
    <string name="addedUserToFriends">User added to friends.</string>
    <string name="userAlreadyInFriends">This user is already your friend.</string>
    <string name="downloadCheckMeTitle">Download Check.me</string>
    <string name="downloadCheckMeLink" translatable="false">https://play.google.com/store/apps/details?id=com.krystianwsul.checkme</string>
    <string name="inviteTitle">This contact doesn\'t seem to be a Check.me user.  Would you like to share a link with them to download the app?</string>
    <string name="userNotFound">User not found</string>
    <string name="addFriend">Add a friend</string>
    <string name="showProjects">Group by project</string>
    <string name="myTasks">My tasks</string>
    <string name="tooltip_tasks_tab">Want to see a list of your tasks?  Check the \"Tasks\" tab.</string>
    <string name="tooltip_add_project">Want to organize your tasks, or share them with another user?  Use a project.</string>
    <string name="tooltips">Tooltips</string>
    <string name="tooltipsDescription">Show tooltips from the beginning</string>
    <string name="tooltipsRestarted">Tooltips restarted</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="setAutomatically">Set automatically</string>
    <string name="language">Language</string>
    <string name="morning">morning</string>
    <string name="afternoon">afternoon</string>
    <string name="evening">evening</string>
    <string name="editProject">Edit project</string>
    <string name="showTasks">Show tasks</string>
    <string name="migrateDescription">Change description to task</string>
    <string name="copyAllReminders">Copy all reminders?</string>
    <string name="allReminders">All reminders</string>
    <string name="justThisReminder">Just this reminder</string>
    <string name="allProjects">All projects</string>
    <string name="foreignPrivateProjectSuffix">\'s tasks</string>
    <string name="reminderCannotBeEmpty">Reminder cannot be empty</string>
    <string name="shownInPrefix">Shown in</string>
</resources>