<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gui.main.MainActivity">

    <item
        android:id="@+id/task_menu_share"
        android:title="@string/share"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/task_menu_edit"
        android:title="@string/edit"
        android:orderInCategory="150"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:visible="false"/>

    <item
        android:id="@+id/task_menu_delete"
        android:title="@string/delete"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"/>

    <item
        android:id="@+id/task_menu_select_all"
        android:title="@string/selectAll"
        android:orderInCategory="600"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/task_menu_show_instances"
        android:title="@string/showInstances"
        android:orderInCategory="700"
        android:icon="@drawable/ic_notifications_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/taskMenuCopyTask"
        android:title="@string/copyTask"
        android:orderInCategory="800"
        android:icon="@drawable/ic_content_copy_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/taskMenuWebSearch"
        android:title="@string/webSearch"
        android:orderInCategory="900"
        android:icon="@drawable/ic_baseline_open_in_browser_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/taskMenuMigrateDescription"
        android:title="@string/migrateDescription"
        android:orderInCategory="1000"
        android:icon="@drawable/ic_baseline_description_24"
        app:showAsAction="ifRoom" /><!-- todo migrate description -->

</menu>
