<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_group_share"
        android:title="@string/share"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"/>

    <item
        android:id="@+id/action_group_edit_task"
        android:title="@string/edit_task"
        android:orderInCategory="350"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:visible="false"/>

    <item
        android:id="@+id/action_group_delete_task"
        android:title="@string/delete_task"
        android:orderInCategory="370"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"/>

    <item
        android:id="@+id/action_group_join"
        android:title="@string/join"
        android:orderInCategory="400"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_merge_type_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/action_group_show_task"
        android:title="@string/show_task"
        android:orderInCategory="500"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_assignment_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/actionGroupCopyTask"
        android:title="@string/copyTask"
        android:orderInCategory="600"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/actionGroupWebSearch"
        android:title="@string/webSearch"
        android:orderInCategory="700"
        android:icon="@drawable/ic_baseline_open_in_browser_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionGroupMigrateDescription"
        android:title="@string/migrateDescription"
        android:orderInCategory="800"
        android:icon="@drawable/ic_baseline_description_24"
        app:showAsAction="ifRoom" /><!-- todo migrate description -->

</menu>