<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gui.MainActivity">

    <item
        android:id="@+id/instance_menu_share"
        android:title="@string/share"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:visible="false"/>

    <item
        android:id="@+id/instance_menu_edit_task"
        android:title="@string/edit_task"
        android:orderInCategory="350"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:visible="false"/>

    <item
        android:id="@+id/instance_menu_delete_task"
        android:title="@string/delete_task"
        android:orderInCategory="370"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"/>

    <item
        android:id="@+id/instance_menu_show_task"
        android:title="@string/show_task"
        android:orderInCategory="380"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_assignment_white_24dp"
        android:visible="false"/>

    <item
        android:id="@+id/instance_menu_select_all"
        android:title="@string/selectAll"
        android:orderInCategory="600"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/instance_menu_add_task"
        android:title="@string/add_task_this_time"
        android:orderInCategory="700"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/instanceMenuCopyTask"
        android:title="@string/copyTask"
        android:orderInCategory="800"
        android:icon="@drawable/ic_content_copy_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
