<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gui.MainActivity">
    <item
        android:id="@+id/instance_menu_edit_instance"
        android:title="@string/edit_instance"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_alarm_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/instance_menu_share"
        android:title="@string/share"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/instance_menu_edit_task"
        android:title="@string/edit_task"
        android:orderInCategory="350"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/instance_menu_delete_task"
        android:title="@string/delete_task"
        android:orderInCategory="370"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/instance_menu_show_task"
        android:title="@string/show_task"
        android:orderInCategory="380"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_assignment_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/instance_menu_check"
        android:title="@string/mark_done"
        android:orderInCategory="400"
        app:showAsAction="always"
        android:icon="@drawable/ic_check_box_outline_blank_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/instance_menu_uncheck"
        android:title="@string/mark_not_done"
        android:orderInCategory="500"
        app:showAsAction="always"
        android:icon="@drawable/ic_check_box_white_24dp"
        android:visible="false"/>
</menu>
