<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/instanceMenuSearch"
        android:title="@string/search"
        android:orderInCategory="50"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        android:visible="true"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/instanceMenuHour"
        android:title="@string/hour"
        android:orderInCategory="150"
        android:icon="@drawable/ic_plus_one_white_24dp"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/instanceMenuEditInstance"
        android:title="@string/edit_instance"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_alarm_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/instanceMenuSplit"
        android:title="@string/split"
        android:orderInCategory="600"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_call_split_24"
        android:visible="false" />

    <item
        android:id="@+id/instanceMenuNotify"
        android:title="@string/notify"
        android:orderInCategory="700"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_notifications_active_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/instanceMenuCheck"
        android:title="@string/mark_done"
        android:orderInCategory="1000"
        app:showAsAction="always"
        android:icon="@drawable/ic_check_box_outline_blank_white_24dp"
        android:visible="false"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/instanceMenuUncheck"
        android:title="@string/mark_not_done"
        android:orderInCategory="1000"
        app:showAsAction="always"
        android:icon="@drawable/ic_check_box_white_24dp"
        android:visible="false" />

</menu>