<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gui.MainActivity">
    <item
        android:id="@+id/task_menu_edit"
        android:title="@string/edit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/task_menu_share"
        android:title="@string/share"
        android:orderInCategory="150"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/task_menu_delete"
        android:title="@string/delete"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/task_menu_select_all"
        android:title="@string/selectAll"
        android:orderInCategory="600"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/task_menu_show_instances"
        android:title="@string/showInstances"
        android:orderInCategory="700"
        android:icon="@drawable/ic_notifications_active_white_24dp"
        app:showAsAction="ifRoom"/>
</menu>
