<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_task_share"
        android:title="@string/share"
        android:orderInCategory="25"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_white_24dp"/>
    <item
        android:id="@+id/action_task_edit"
        android:title="@string/edit"
        android:orderInCategory="50"
        app:showAsAction="always"
        android:icon="@drawable/ic_mode_edit_white_24dp"/>
    <item
        android:id="@+id/action_task_join"
        android:title="@string/join"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_merge_type_white_24dp"
        android:visible="false"/>
    <item
        android:id="@+id/action_task_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:orderInCategory="200"
        android:icon="@drawable/ic_delete_white_24dp"/>
    <item
        android:id="@+id/action_task_add"
        android:title="@string/add_task"
        android:orderInCategory="300"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_white_24dp"/>
    <item
        android:id="@+id/action_task_open"
        android:title="@string/open"
        android:orderInCategory="800"
        app:showAsAction="always"
        android:icon="@drawable/ic_keyboard_arrow_right_white_24dp"/>
</menu>