<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/actionShowTaskSearch"
        android:title="@string/search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always"
        android:visible="false"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/actionTaskShowDeleted"
        android:title="@string/showRemoved"
        android:orderInCategory="700"
        app:showAsAction="never"
        android:checkable="true" />

    <item
        android:id="@+id/actionTaskShowAssignedToOthers"
        android:title="@string/showAssignedTo"
        android:orderInCategory="700"
        app:showAsAction="never"
        android:checkable="true"
        android:visible="false" />

    <item
        android:id="@+id/actionTaskShowProjects"
        android:title="@string/showProjects"
        android:orderInCategory="800"
        app:showAsAction="never"
        android:checkable="true"
        android:visible="false" />

</menu>