<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/projectsMenuShowTasks"
        android:title="@string/showTasks"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_assignment_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/projectsMenuEdit"
        android:title="@string/editProject"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/projectsMenuDelete"
        android:title="@string/delete"
        android:orderInCategory="400"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />

</menu>