<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/projectMenuShowTasks"
        android:title="@string/showTasks"
        android:orderInCategory="100"
        android:icon="@drawable/ic_assignment_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/projectMenuEdit"
        android:title="@string/editProject"
        android:orderInCategory="150"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/projectMenuSelectAll"
        android:title="@string/selectAll"
        android:orderInCategory="200"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>