<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_group_notify"
        android:title="@string/notify"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_notifications_active_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/action_group_edit_instance"
        android:title="@string/edit_instance"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_alarm_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/action_group_mark_done"
        android:title="@string/mark_done"
        android:orderInCategory="1000"
        app:showAsAction="always"
        android:icon="@drawable/ic_check_box_outline_blank_white_24dp"
        android:visible="false" />

    <item
        android:id="@+id/action_group_mark_not_done"
        android:title="@string/mark_done"
        android:orderInCategory="1000"
        app:showAsAction="always"
        android:icon="@drawable/ic_check_box_white_24dp"
        android:visible="false" />

</menu>